fix:search user